add filter fields to return subset of the attributes for the drone response
