# openAPI/drones.yaml
@@ -174,6 +174,15 @@ paths:
           schema:
             type: integer
             description: drone id
+        - in: query
+          name: fields
+          required: false
+          schema:
+            type: string
+            description: |
+              coma seperated query that select a subset of the attributes of an entity to be present in a returned representation.
+            example: id,batteryCapacity
+
       responses:
         200:
           description: Ok
